[tool.poetry]
name = "ad-sync"
version = "0.1.0"
description = "A tool to export users from a Windows Active Directory and import them into another."
authors = ["Philipp Claves <philipp@p3ki.com>", "Felix Hofmann <felix.hofmann@fxhm.de>"]
readme = "README.md"
package-mode = true


[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pywin32 = {version = "^308", markers = "sys_platform == 'win32'"}
python-win-ad = {version = "^0.6.3", markers = "sys_platform == 'win32'"}
pydantic = "^2.10.4"
jinja2 = "^3.1.6"
bottle = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
 pyinstaller = "6.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^25.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
indent-width = 4
line-length = 120 # pycharm default. just works well on modern displays.


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # ignore unused imports in __init__.py files

[tool.poetry-pyinstaller-plugin]
version = "6.12.0"

[tool.poetry-pyinstaller-plugin.scripts]
user-sync = { source = "user_sync.py", type = "onefile" }